# hollerithengeryml

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Deloyment.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  release-please-config.json  set_environment.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-docs.yml  ci.yml  deploy.yml  release-please.yml
Backend/: .gitignore  Dockerfile  main.py  requirements.txt  test_backend.py
Backend/data/: scaler.pkl
Backend/data/PKL_Modelle_Einzeln/: Vorhersage_Energy_RandomForestRegressor_EINZELN.ipynb  best_model_df_dt.pkl  best_model_df_gnb.pkl  best_model_df_lgr.pkl
Backend/models/: energy_predictor.py  model_manager.py  predictions_parameters.py
Content/Experimentation/notebooks/: Heart_Disease.ipynb  KNN_Clustern_für_XGB__1_.ipynb  Vorhersage_Energy_RandomForestRegressor_inkl_Datenanalyse.ipynb  combined_data_Bank.csv
Content/Experimentation/results/: emissions_Bank_GaussianNB.csv  emissions_Bank_KNN.csv  emissions_Bank_LogisticRegression.csv  emissions_DT_Intel.csv  emissions_Diabetes_GaussianNB.csv  emissions_Diabetes_KNN.csv  emissions_Diabetes_LogisticRegression.csv  emissions_Diabtetes_DecsionsTree.csv  (+18 more)
Content/docu/: gitlab-model-experiments.md
Frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
Frontend/src/: customTheme.scss  index.html  styles.scss
ML-Notebooks/: .gitignore  energy_experiement.ipynb
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/src/hollerith_api/: __init__.py  config.py  dependencies.py  logging.py  main.py  rate_limit.py
apps/api/src/hollerith_api/routes/: __init__.py  health.py  metadata.py  predictions.py
apps/api/src/hollerith_api/schemas/: __init__.py  health.py  metadata.py  predictions.py
apps/api/src/hollerith_api/services/: __init__.py  energy_predictor.py  model_loader.py  model_manager.py
apps/api/tests/: conftest.py  test_health.py  test_metadata.py  test_predictions.py  test_services.py
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MODEL_CARD.md  RUNBOOK.md
infra/: Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
infra/deploy/: deploy.sh  provision.sh
research/: README.md
research/docs/: calculation-of-energy-equivalencies.md
research/ml-notebooks/: data_analysis.ipynb
(+128 files in other folders)
