[project]
name = "hollerith-api"
version = "0.1.0"
description = "FastAPI backend serving the HollerithEnergyML meta-model."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "HollerithEnergyML contributors" }]

# Runtime dependencies are pinned precisely where compatibility with the
# 2024 scikit-learn artefact matters, and loosely (compatible-release) where
# it does not. Do not bump scikit-learn, numpy, pandas, or joblib without
# re-verifying that `apps/api/models/ml_model_package.pkl` still loads.
dependencies = [
    "fastapi>=0.135,<0.136",
    "uvicorn[standard]>=0.44,<0.45",
    "gunicorn>=25.3,<26",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.13,<3",
    "scikit-learn==1.2.2",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "joblib==1.5.3",
    "structlog>=25.5,<26",
    "slowapi>=0.1.9,<0.2",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "httpx>=0.28,<0.29",
    "ruff>=0.15,<1",
    "mypy>=1.20,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hollerith_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is `x: T = Depends(...)` in argument
# defaults. Ruff's B008 rule fires on any function call in an argument
# default; whitelisting Depends and friends is the recommended FastAPI
# integration pattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib.*", "slowapi.*"]
ignore_missing_imports = true
